--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "flat-carousel": "^0.0.1",
     "graphql": "^16.6.0",
     "graphql-react": "^20.0.0",
     "graphql-request": "^5.0.0",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
